--- a/server/http/dataset-detail/dataset-detail-en.html
+++ b/server/http/dataset-detail/dataset-detail-en.html
@@ -3,9 +3,11 @@
 <head>
   {{> head }}
   <!-- Site specific. -->
-  <title>Dataset - Národní katalog otevřených dat (NKOD)</title>
-  <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky"/>
-  <!--  -->
+  <title>{{heading.title}} - National Open Data Catalog (NODC)</title>
+  <link rel="canonical" href="/dataset">
+  <link rel="alternate" href="/datová-sada" hreflang="cs">
+  <link rel="alternate" href="/dataset" hreflang="en">
+  <script src="/aplikace/assets/js/dataset-detail.js"></script>
 </head>
 
 <body>
