--- a/server/http/dataset-list/dataset-list-en.html
+++ b/server/http/dataset-list/dataset-list-en.html
@@ -1,11 +1,14 @@
-<html lang="en">
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
 
 <head>
   {{> head }}
   <!-- Site specific. -->
-  <title>Datasets - Národní katalog otevřených dat (NKOD)</title>
-  <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky"/>
-  <!--  -->
+  <title>Datasets - National Open Data Catalog (NODC)</title>
+  <link rel="canonical" href="/datasets">
+  <link rel="alternate" href="/datové-sady" hreflang="cs">
+  <link rel="alternate" href="/datasets" hreflang="en">
+  <script src="/aplikace/assets/js/dataset-list.js"></script>
 </head>
 
 <body>
