--- a/server/http/application-list/application-list-cs.html
+++ b/server/http/application-list/application-list-cs.html
@@ -5,13 +5,12 @@
   {{> head }}
   <!-- Site specific. -->
   <title>Aplikace - Národní katalog otevřených dat (NKOD)</title>
-  <!--  -->
+  <script src="/aplikace/assets/js/application-list.js"></script>
 </head>
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
   <gov-container>
-    <gov-spacer size="xs" breakpoint="sm"></gov-spacer>
     <gov-grid>
       <gov-grid-item size-sm="12/12" size-md="4/12">
         {{#each facets}} {{>facet}} {{/each}}
@@ -29,13 +28,12 @@
           <gov-accordion-item>
             <h3 slot="label">Rozšířené vyhledávání</h3>
             <div>
-              <gov-button slot="button" variant="primary" size="m" href="{{clear-href}}" wcag-label="Smaž filtry">
+              <gov-button slot="button" variant="warning" size="m" href="{{clear-href}}" wcag-label="Smaž filtry">
                 Smaž filtry
               </gov-button>
             </div>
           </gov-accordion-item>
         </gov-accordion>
-        <script src="/aplikace/assets/js/text-search.js"></script>
         {{/with}}
         <!-- Result bar. -->
         {{#with result-bar}} {{> result-bar }} {{/with}}
