Add link to dataset series
#17

--- a/server/http/dataset-detail/dataset-detail-cs.html
+++ b/server/http/dataset-detail/dataset-detail-cs.html
@@ -163,6 +163,12 @@
         {{/if}}
       </gov-grid-item>
     </gov-grid>
+    {{#if parentDataset}}
+    <p>
+      Tato datová sada je součástí datové série
+      <a href="{{parentDataset.href}}" title="Přejít na datovou sérii.">{{parentDataset.label}}</a>.
+    </p>
+    {{/if}}
     <br />
   </gov-container>
   {{/with}}
