--- a/server/http/application-list/application-list-cs.html
+++ b/server/http/application-list/application-list-cs.html
@@ -3,14 +3,18 @@
 
 <head>
   {{> head }}
-  <!-- Site specific. -->
   <title>Aplikace - Národní katalog otevřených dat (NKOD)</title>
+  <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky" />
+  <link rel="canonical" href="/applications">
+  <link rel="alternate" href="/aplikace" hreflang="cs">
+  <link rel="alternate" href="/applications" hreflang="en">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-list.css">
   <script src="/assets/catalog/js/application-list.js"></script>
 </head>
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
-  <gov-container>
+  <gov-container class="applications-container">
     <gov-grid>
       <gov-grid-item size-sm="12/12" size-md="4/12">
         {{#each facets}} {{>facet}} {{/each}}
@@ -27,7 +31,7 @@
         <gov-accordion size="xs">
           <gov-accordion-item>
             <h3 slot="label">Rozšířené vyhledávání</h3>
-            <div>
+            <div class="extended-search">
               <gov-button slot="button" variant="warning" size="m" href="{{clear-href}}" wcag-label="Smaž filtry">
                 Smaž filtry
               </gov-button>
@@ -38,17 +42,17 @@
         <!-- Result bar. -->
         {{#with result-bar}} {{> result-bar }} {{/with}}
         <!-- Datasets -->
-        <div class="p-2 list">
-          <hr/>
+        <hr/>
+        <div class="p-2 resource-list">
           {{#each documents}}
-          <div class="p-2 list-item">
-            <a href="{{href}}">
-              <h3>
+          <div class="p-2 resource-list-item">
+            <a href="{{href}}" class="flex-space-between">
+              <h3 class="inline">
                 {{title}}
-                <gov-icon name="chevron-right"></gov-icon>
               </h3>
+              <gov-icon name="chevron-right"></gov-icon>
             </a>
-            <p style="overflow: hidden; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical;">
+            <p class="description-preview">
               {{breaklines description}}
             </p>
             <div>
