--- a/server/http/local-catalog-list/local-catalog-list-cs.html
+++ b/server/http/local-catalog-list/local-catalog-list-cs.html
@@ -1,15 +1,18 @@
-<html lang="cs">
+<!DOCTYPE html>
+<html dir="ltr" lang="cs">
 
 <head>
   {{> head }}
-  <!-- Site specific. -->
   <title>Lokální katalogy - Národní katalog otevřených dat (NKOD)</title>
   <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky" />
+  <link rel="canonical" href="/local-catalogs">
+  <link rel="alternate" href="/lokální-katalogy" hreflang="cs">
+  <link rel="alternate" href="/local-catalogs" hreflang="en">
 </head>
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
-  <gov-container>
+  <gov-container class="catalogs-container">
     <br/>
     <h1>Lokální katalogy</h1>
     <p>
@@ -17,13 +20,13 @@
     </p>
     <gov-grid>
       {{#each catalogs}}
-      <gov-grid-item size-sm="12/12" size-md="6/12" size-md="6/12" size-lg="4/12" size-xl="3/12" style="padding: .25rem">
+      <gov-grid-item size-sm="12/12" size-md="6/12" size-md="6/12" size-lg="4/12" size-xl="3/12" class="p-1">
         <gov-card>
           <div class="gov-card__header">
-            <h3 class="gov-card__title" style="display: inline;">
-              {{publisher.label}}
-            </h3>
             <a href="{{publisher.iri}}">
+              <h3 class="gov-card__title inline">
+                {{publisher.label}}
+              </h3>
               <gov-icon name="box-arrow-up-right"></gov-icon>
             </a>
           </div>
@@ -43,9 +46,9 @@
               </div>
             </div>
             <div class="gov-card__footer" style="font-size: x-large;">
-              <a href="{{homepage}}"><gov-icon name="house-door-fill"></gov-icon></a>
-              <a href="{{endpointURL}}"><gov-icon name="link-45deg"></gov-icon></a>
-              <a href="{{deleteUrl}}"><gov-icon name="trash"></gov-icon></a>
+              <a href="{{homepage}}" title="Domovská stránka katalogu"><gov-icon name="house-door-fill"></gov-icon></a>
+              <a href="{{endpointURL}}" title="SPARQL endpoint"><gov-icon name="link-45deg"></gov-icon></a>
+              <a href="{{deleteUrl}}" title="Odstranění katalogu"><gov-icon name="trash"></gov-icon></a>
             </div>
           </div>
         </gov-card>
