--- a/server/http/suggestion-detail/suggestion-detail-cs.html
+++ b/server/http/suggestion-detail/suggestion-detail-cs.html
@@ -3,13 +3,17 @@
 
 <head>
   {{> head }}
-  <!-- Site specific. -->
-  <title>Návrh - Národní katalog otevřených dat (NKOD)</title>
+  <title>{{dataset.heading.title}} - Národní katalog otevřených dat (NKOD)</title>
+  <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky" />
+  <link rel="canonical" href="/suggestion-for-dataset-to-be-opened">
+  <link rel="alternate" href="/návrh-na-datovou-sadu-k-otevření" hreflang="cs">
+  <link rel="alternate" href="/suggestion-for-dataset-to-be-opened" hreflang="en">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-list.css">
 </head>
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
-  <gov-container>
+  <gov-container class="suggestion-container">
     {{#with suggestion}}
     <div>
       <h1>{{title}}</h1>
@@ -88,9 +92,9 @@
     {{#if visible}}
     <h2>Datové sady</h2>
     <br/>
-    <div class="list">
+    <div class="p-2 resource-list">
       {{#each items}}
-      <div class="list-item">
+      <div class="resource-list-item">
         <a href="{{href}}" rel="nofollow noopener noreferrer">
           <h3>{{title}}</h3>
         </a>
