--- a/server/http/dataset-list/dataset-list-cs.html
+++ b/server/http/dataset-list/dataset-list-cs.html
@@ -3,17 +3,19 @@
 
 <head>
   {{> head }}
-  <!-- Site specific. -->
   <title>Datové sady - Národní katalog otevřených dat (NKOD)</title>
+  <meta name="description" content="Portál otevřených dat a Národní katalog otevřených dat České republiky" />
   <link rel="canonical" href="/datasets">
   <link rel="alternate" href="/datové-sady" hreflang="cs">
   <link rel="alternate" href="/datasets" hreflang="en">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/resource-list.css">
+  <link type="text/css" rel="stylesheet" href="/assets/catalog/css/dataset-list.css">
   <script src="/assets/catalog/js/dataset-list.js"></script>
 </head>
 
 <body>
   {{#with navigation}} {{> navigation }} {{/with}}
-  <gov-container>
+  <gov-container class="datasets-container">
     <gov-grid>
       <gov-grid-item size-sm="12/12" size-md="4/12">
         {{#each facets}} {{>facet}} {{/each}}
@@ -32,25 +34,33 @@
           <gov-accordion-item>
             <h3 slot="label">Rozšířené vyhledávání</h3>
             <div class="extended-search">
-              <div class="time">
-                <div>
+              <div class="time-coverage mb-2">
+                <div class="time-inputs">
                   Časové pokrytí od
                   <gov-form-input input-type="date" data-type="time-from" value="{{query.temporalFrom}}"></gov-form-input>
                   do
                   <gov-form-input input-type="date" data-type="time-to" value="{{query.temporalTo}}"></gov-form-input>
                 </div>
-                <div class="flex-justify-end">
+                <div class="flex-justify-end time-buttons">
                   <gov-button variant="primary" size="m" data-type="this-year">Tento rok</gov-button>
                   <gov-button variant="primary" size="m" data-type="last-year">Minulý rok</gov-button>
                 </div>
               </div>
-              <div class="vdf">
+              <div class="flex-space-between mb-2">
                 Veřejný datový fond
                 <gov-form-switch data-type="public-data" {{#if query.publicData}}checked{{/if}}>
                   <gov-form-label slot="label">Veřejné údaje</gov-form-label>
                 </gov-form-switch>
                 <gov-form-switch data-type="codelist" {{#if query.codelist}}checked{{/if}}>
                   <gov-form-label slot="label">Číselník</gov-form-label>
+                </gov-form-switch>
+              </div>
+              <div class="flex-row flex-space-evenly mb-2">
+                <gov-form-switch data-type="high-value-dataset" {{#if query.hvdDataset}}checked{{/if}}>
+                  <gov-form-label slot="label">HVD Datové sady</gov-form-label>
+                </gov-form-switch>
+                <gov-form-switch data-type="dynamic-data" {{#if query.dynamicData}}checked{{/if}}>
+                  <gov-form-label slot="label">Dynamické data</gov-form-label>
                 </gov-form-switch>
               </div>
               <div class="flex-space-between">
@@ -72,6 +82,8 @@
               "temporalTo": "časové-období-konec",
               "publicData": "vdf-veřejné-údaje",
               "codelist": "vdf-číselník",
+              "hvdDataset": "hvd",
+              "dynamicData": "dynamická-data",
             },
             "query": {{{queryObjectAsString}}},
           };
@@ -80,20 +92,30 @@
         <!-- Result bar. -->
         {{#with result-bar}} {{> result-bar }} {{/with}}
         <!-- Datasets -->
-        <div class="p-2 list">
-          <hr />
+        <hr />
+        <div class="p-2 resource-list">
           {{#each documents}}
-          <div class="p-2 list-item">
-            <a href="{{href}}">
-              <h3>
+          <div class="p-2 resource-list-item">
+            <a href="{{href}}" class="flex-space-between">
+              <h3 class="inline">
                 {{title}}
-                <gov-icon name="chevron-right"></gov-icon>
               </h3>
+              <gov-icon name="chevron-right"></gov-icon>
             </a>
-            <p style="overflow: hidden; display: -webkit-box; -webkit-line-clamp: 3; -webkit-box-orient: vertical;">
+            <p class="description-preview">
               {{breaklines description}}
             </p>
             <div>
+              {{#if hvd}}
+              <gov-chip variant="error" type="outlined" size="xs">
+                HVD
+              </gov-chip>
+              {{/if}}
+              {{#if dynamicData}}
+              <gov-chip variant="warning" type="outlined" size="xs">
+                Dynamická
+              </gov-chip>
+              {{/if}}
               {{#each format}}
               <gov-chip variant="primary" type="outlined" size="xs">
                 {{label}}
