--- a/server/http/dataset-detail/dataset-detail-cs.html
+++ b/server/http/dataset-detail/dataset-detail-cs.html
@@ -406,7 +406,7 @@
                 {{#if schemaArrayVisible}}
                 <li class="schema">
                   {{#each schemaArray}}
-                  <a href="{{this}}">Schéma</a>
+                  <a href="{{this}}">Standard</a>
                   <span class="quality"></span>
                   {{/each}}
                 </li>
