--- a/server/http/dataset-list/dataset-list-cs.html
+++ b/server/http/dataset-list/dataset-list-cs.html
@@ -55,7 +55,7 @@
                   <gov-tooltip>
                     <gov-icon name="question-circle" type="bootstrap" class="larger"></gov-icon>
                     <gov-tooltip-content>
-                      TODO-TEXT Nápověda pro HVD Datové sady
+                      Datové sady s vysokou socio-ekonomickou hodnotou (High-Value Dataset - HVD)
                     </gov-tooltip-content>
                   </gov-tooltip>
                 </div>
@@ -67,7 +67,8 @@
                   <gov-tooltip>
                     <gov-icon name="question-circle" type="bootstrap" class="larger"></gov-icon>
                     <gov-tooltip-content>
-                      TODO-TEXT Nápověda pro Dynamické data
+                      Dynamická data - data měnící se nepravidelně, či velmi rychle, například v reálném čase.
+                      <!--Dynamic data - data that is frequently updated, e.g. real-time data-->
                     </gov-tooltip-content>
                   </gov-tooltip>
                 </div>
